<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BatteryTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/charge_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ChargeStatus"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ba_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BatteryPercentage"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/ba_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BatteryVoltage"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/ba_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BatteryTemperature"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/pass"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/fail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/fail"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
