<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KeyTestActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="end"
        android:orientation="vertical">

        <Button
            android:id="@+id/up_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="13dp"
            android:text="@string/up_volume"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/down_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="13dp"
            android:text="@string/down_volume"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/power_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="13dp"
            android:text="@string/power_volume"
            android:textAllCaps="false" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/pass"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/fail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/fail"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>